--- a/STUDENTAPI-REACT/.env
+++ b/STUDENTAPI-REACT/.env
@@ -1,1 +1,1 @@
-VITE_API_URL=http://ec2-54.163.32.96.compute-1.amazonaws.com:2001
+VITE_API_URL=http://ec2-54-163-32-96.compute-1.amazonaws.com:2001
